# Folium

./: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.ci  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
include/: CommandFactory.h  CommandLineParser.h  IPdfMerger.h  IPdfSplitter.h  MergeCommand.h  PdfMerger.h  PdfSplitter.h  SplitCommand.h
src/: CommandFactory.cpp  CommandLineParser.cpp  MergeCommand.cpp  PdfMerger.cpp  PdfSplitter.cpp  SplitCommand.cpp  main.cpp
tests/: CMakeLists.txt  CommandFactoryTest.cpp  CommandLineParserTest.cpp  MergeCommandTest.cpp  MockPdfMerger.h  MockPdfSplitter.h  SplitCommandTest.cpp
